change file type and plot graph
change import from .txt to .docx and change create plot graph all the time to update

--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
                             <div class="gauge">
                                 <div class="gauge__body">
                                   <div class="gauge__fill"></div>
-                                  <div class="gauge__fill"></div>
-                                  <div class="gauge__fill"></div>
                                   <div class="gauge__cover"></div>
                                 </div>
                             </div>
@@ -55,6 +53,7 @@
             </div>
           </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.4.2/mammoth.browser.min.js"></script>
     <script src="indexScripts.js"></script>
 </body>
 </html>
